# Matching

./: CMakeLists.txt  CSRGraph.cpp  CSRGraph.h  DataPassingToThreads.cpp  DataPassingToThreads.h  PatternGraph.cpp  PatternGraph.h  main.cpp
include/: CSRGraph.h  PatternGraph.h
src/: CSRGraph.cpp  PatternGraph.cpp  main.cpp
